style.css
/* ... */
input[type=submit] {
    border-radius: 5px;
    padding: 14px;
    margin-bottom: 20px;
}

#h1-title {
    line-height: 1.4;
    font-size: 30px;
    margin-top: 0px;
    margin-bottom: 0px;
    font-family: 'Indie Flower', cursive;
}

#js-priority-label,
#js-pantry-label,
option {
    margin-top: 8px;
    font-size: 12px;
}

select:focus {
    outline: none;
}

#js-recipe-search:focus {
    outline: none;
    background: transparent;
}

label,
input {
    font-size: 14px;
    line-height: 1.4;
    display: inline-block;
}

#menu-subitems {
    float: left;
    font-size: 10px;
}

​ p {
    font-size: 20px;
    line-height: 1.4;
}

li p {
    max-width: 300px;
    height: 30px;
    white-space: normal;
}

.paper {
    font-size: 20px;
    line-height: 1.6;
}


/* /////////////////////////////////////////////////////////////////////////////
///////////////////////////////////////////////////////////////////////////// */


/* Image Carousel Section */

#scroll-right {
    position: relative;
    top: -260px;
    height: 100px;
    width: auto;
    right: 0;
    float: right;
    cursor: pointer;
    /* left: -30px; */
}

#scroll-left {
    position: relative;
    top: -260px;
    height: 100px;
    left: -0px;
    width: auto;
    cursor: pointer;
}

#scroll-left:hover {
    background-color: rgb(131, 131, 131);
}

#scroll-right:hover {
    background-color: rgb(131, 131, 131);
}


/* .position-absolute {
        position: absolute;
    } */

#recipe-display {
    overflow-x: scroll;
    height: 420px;
    scroll-snap-type: x mandatory;
    scroll-behavior: smooth;
    margin-top: 120px;
    width: auto;
    padding: 0px;
    /* box-shadow: -2px 5px 10px -1px; */
    /* Firefox */
    -ms-overflow-style: none;
    display: flex;
    flex-direction: row;
    flex-wrap: nowrap;
    /* Internet Explorer 10+ */
    /* overflow-y: scroll;
        white-space: nowrap;
        scrollbar-width: none; */
    list-style: none;
}

#recipe-display::-webkit-scrollbar {
    /* WebKit */
    width: 0;
    height: 0;
}

.recipe-item {
    min-width: 100%;
    /* border: 1px solid lightgray; */
    position: relative;
    /* display: inline-block; */
    scroll-snap-align: center;
    width: 260px;
    height: 400px;
    background-image: url('./img/polaroid_1.png');
    background-repeat: no-repeat;
    background-position: center;
    background-size: auto 100%;
}


/* .recipe-inner-box {
        width: 100%;
        height: 100%;
       
    } */

.recipe-image {
    width: 260px;
    height: 260px;
    position: absolute;
    left: 1px;
    top: -50px;
    right: 0;
    bottom: 0;
    display: block;
    margin: auto;
    object-fit: cover;
    border-color: rgb(199, 199, 199);
    border-style: solid;
    border-width: 1px;
    /* position: center; */
}

.image-caption {
    position: absolute;
    bottom: -4%;
    width: 100%;
    text-align: center;
    /* transform: translate(-50%, -50%); */
    /* background-color: rgba(77, 77, 77, 0.692); */
}

.caption-text {
    width: auto;
    height: 30px;
    white-space: normal;
    /* width: 380px;
        padding-right: 10px;
        padding-left: 10px; */
    color: black;
    overflow: hidden;
}

h2.caption-text {
    margin-top: 0px;
    padding-bottom: 30px;
}

h3.caption-text {
    margin-bottom: 0px;
}

.hidden {
    display: none;
}

.selected {
    background-color: rgba(4, 106, 189, 0.132);
}


/* /////////////////////////////////////////////////////////////////////////////
///////////////////////////////////////////////////////////////////////////// */


/* Recipe Section */

#recipe-name {
    margin-top: -20px;
}

#recipe-instructions {
    background-color: rgba(255, 255, 255, 0.329);
}

#missing-ingredients,
#shopping-list {
    list-style-type: none;
}

.carrot-container {
    position: absolute;
}

#magnet-carrot {
    top: -70px;
    left: -45px;
    position: absolute;
    width: 130px;
    height: auto;
}

#shopping-list-label {
    margin-top: -200px;
    padding-bottom: 12px;
}

#shopping-list-section {
    background-color: yellow;
    max-width: 400px;
    padding-left: 20px;
    min-height: 400px;
    border-radius: 5px;
    box-shadow: -2px 5px 10px -1px;
    margin-top: 90px;
    font-family: 'Indie Flower', cursive;
}

#magnet-onion {
    top: -100px;
    position: relative;
    left: 260px;
    width: 160px;
    height: auto;
    overflow: hidden;
}

#handle {
    position: absolute;
    width: 240px;
    height: 3800px;
    right: 15px;
    top: 100px;
    -webkit-filter: drop-shadow(45px 15px 5px #222);
    filter: drop-shadow(15px 15px 15px #222);
    /* display: none; */
}

#magnet-corn {
    top: -120px;
    position: absolute;
    width: 280px;
    right: 0px;
    height: auto;
    pointer-events: none;
    overflow: auto;
}
/* ... */

